# project-teem-7_photo_share

./: .env.example  main.py  pyproject.toml  requirements.txt
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: comments.py  photo.py  users.py
src/routes/: auth.py  comments.py  photo.py  users.py
src/schemas/: comments.py  photo.py  user.py
src/services/: auth.py  email.py  photo_service.py  roles.py
